--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.55",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.1.5",
